--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "antd": "^4.19.5",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.11"
+    "sass": "^1.50.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
